# kelp

./: .gitignore  Cargo.toml  PLANS.md  README.md  TODO.md
assets/: kelp-banner.txt  kelp-leaf.ans  kelp-leaf.txt
crates/kelp_app/: Cargo.toml
crates/kelp_app/src/: app.rs  app_builder.rs  lib.rs
crates/kelp_derive/: Cargo.toml
crates/kelp_derive/src/: lib.rs
crates/kelp_message/: Cargo.toml
crates/kelp_message/src/: error.rs  lib.rs  message.rs
crates/kelp_origin/: Cargo.toml
crates/kelp_origin/src/: lib.rs  origin.rs
crates/kelp_parser/: Cargo.toml
crates/kelp_parser/src/: dictionary.pest  lib.rs
crates/kelp_parser/src/parse_tree/: mod.rs  parse_tree.rs
crates/kelp_span/: Cargo.toml
crates/kelp_span/src/: lib.rs
crates/kelp_stree/: Cargo.toml
crates/kelp_stree/src/: composer.rs  id_factory.rs  lib.rs  stree.rs
crates/kelp_ttree/: Cargo.toml
crates/kelp_ttree/src/: lib.rs  origin_resolver.rs  ttree.rs  type_checker.rs  types.rs
docs/book/: getting_started.md  hello_world.md  primitive_types.md
examples/: evaluation.kelp  factorial.kelp  factorial.klp  fizzbuzz.kelp  fizzbuzz.klp  hello_world.klp  notation.kelp  notation.klp  operators.klp  prelude-old.kelp  prelude.kelp  prelude.klp  sequences.kelp
examples/multi file project/: library.kelp  main.kelp
examples/multi file project/nested/: nested-library.kelp
rust-old/src/: Cargo.toml  ast.rs  builtins.rs  reader.rs  types.rs
rust-old/src/llvm/: primitive_io.rs  string.rs
src/: ast.rs  context.rs  dictionary.pest  env.rs  error.rs  instruction.rs  kelpc.rs  kelpi.rs  lib.rs  link.rs  main.rs  message.rs  node.rs  parser.rs  reader.rs  span.rs  special_forms.rs  token.rs  typ.rs  typer.rs
src/ast/: ast_builder.rs  first_pass.rs  mod.rs  span.rs
src/error/: error.rs
src/llvm/: memops.rs  mod.rs
src/message/: error.rs  mod.rs
src/operator/: builder.rs  mod.rs
src/parser/: mod.rs  parser_struct.rs  parser_types.rs
tmp/: dict.pest
