[package]
name = "kelp"
version = "0.0.1"
authors = ["Jáchym Tomášek"]
edition = "2018"
categories = ["compilers"]
license = "Apachev2"
readme = "README.md"
default-run = "kelpi"

[[bin]]
name = "kelpi"
path = "src/kelpi.rs"

# [[bin]]
# name = "kelpc"
# path = "src/kelpc.rs"

[lib]
crate-type = ["lib"]

[dependencies]
regex = "*"
lazy_static = "1.4"
colored = "2.0.0"
clap = "2.33.3"
rustyline = "9.0.0"
rustyline-derive = "0.5.0"
#itertools = "0.10.1"

#[workspace]
#members = ["crates/*"]

#[dependencies]
#kelp_app = {path = "crates/kelp_app", version = "*"}
