[package]
name = "kelp_app"
version = "0.0.1"
authors = [ "Jáchm Tomášek <jachym.tomasek@tutanota.com>" ]
edition = "2018"

[dependencies]
kelp_message = {path = "../kelp_message", version = "*"}
kelp_stree = {path = "../kelp_stree", version = "*"}
kelp_parser = {path = "../kelp_parser", version = "*"}
