[package]
name = "kelp_parser"
version = "0.0.1"
authors = [ "Jáchm Tomášek <jachym.tomasek@tutanota.com>" ]
edition = "2018"

[dependencies]
kelp_message = {path = "../kelp_message", version = "*"}
kelp_span = {path = "../kelp_span", version = "*"}
kelp_derive = {path = "../kelp_derive", version = "*"}
kelp_origin = {path = "../kelp_origin", version = "*"}

pest = "2.1"
pest_derive = "2.1"
