[package]
name = "kelp_stree"
version = "0.0.1"
authors = [ "Jáchm Tomášek <jachym.tomasek@tutanota.com>" ]
edition = "2018"

[dependencies]
kelp_derive = {path = "../kelp_derive", version = "*"}
kelp_span = {path = "../kelp_span", version = "*"}
kelp_message = {path = "../kelp_message", version = "*"}
kelp_parser = {path = "../kelp_parser", version = "*"}
kelp_origin = {path = "../kelp_origin", version = "*"}
