[package]
name = "kelp_ttree"
version = "0.0.1"
authors = [ "Jáchym Tomášek <jachym.tomasek@tutanota.com>" ]
edition = "2018"

[dependencies]
kelp_span = {path = "../kelp_span", version = "*"}
kelp_derive = {path = "../kelp_derive", version = "*"}
kelp_stree = {path = "../kelp_stree", version = "*"}
kelp_origin = {path = "../kelp_origin", version = "*"}
kelp_message = {path = "../kelp_message", version = "*"}
